--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/express": "^4.17.13",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
+    "@types/request-promise": "^4.1.48",
     "bootstrap": "^5.1.1",
     "css-loader": "^6.3.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "request-promise": "^4.2.6",
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
