--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
