--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,14 @@ name: Deploy
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
+    env:
+      SSH_KEY: ${{secrets.SSH_KEY}}
 
     steps:
       - uses: actions/checkout@v2
@@ -17,3 +20,10 @@ jobs:
           cache: "npm"
       - run: npm install
       - run: npm run build
+      - run: mkdir ~/.ssh
+      - run: 'echo "$SSH_KEY" >> ~/.ssh/github-action'
+      - run: chmod 400 ~/.ssh/github-action
+      - run: echo -e "Host joedubshadow\n\tUser genius_api\n\tHostname 143.110.230.234\n\tIdentityFile ~/.ssh/github-action\n\tStrictHostKeyChecking No" >> ~/.ssh/config
+      - run: rsync -e ssh public joedubshadow:~/static
+      - run: rsync -e ssh dist/server.js joedubshadow:~/api/server.js
+      - run: ssh joedubshadow "pm2 reload all"
